Package_Tools/include-C/libmongoc-1.0/mongoc/fertig/mongoc_collection.h

#define MONGOC_COLLECTION_H
typedef struct _mongoc_collection_t mongoc_collection_t;
typedef struct _mongoc_index_model_t mongoc_index_model_t;
extern mongoc_index_model_t *
mongoc_index_model_new (const bson_t *keys, const bson_t *opts);
extern void mongoc_index_model_destroy (mongoc_index_model_t *model);
extern bool
mongoc_collection_create_indexes_with_opts (mongoc_collection_t *collection,
                                            mongoc_index_model_t *const *models,
                                            size_t n_models,
                                            const bson_t *opts,
                                            bson_t *reply,
                                            bson_error_t *error);
extern mongoc_cursor_t *
mongoc_collection_find (mongoc_collection_t *collection,
                        mongoc_query_flags_t flags,
                        uint32_t skip,
                        uint32_t limit,
                        uint32_t batch_size,
                        const bson_t *query,
                        const bson_t *fields,
                        const mongoc_read_prefs_t *read_prefs)
   ;//xxxxxxxx BSON_GNUC_DEPRECATED;_FOR (mongoc_collection_find_with_opts)      ;
extern mongoc_cursor_t *
mongoc_collection_find_with_opts (mongoc_collection_t *collection,
                                  const bson_t *filter,
                                  const bson_t *opts,
                                  const mongoc_read_prefs_t *read_prefs)
   ;
extern bool
mongoc_collection_insert (mongoc_collection_t *collection,
                          mongoc_insert_flags_t flags,
                          const bson_t *document,
                          const mongoc_write_concern_t *write_concern,
                          bson_error_t *error);
extern bool
mongoc_collection_insert_one (mongoc_collection_t *collection,
                              const bson_t *document,
                              const bson_t *opts,
                              bson_t *reply,
                              bson_error_t *error);
extern bool
mongoc_collection_insert_many (mongoc_collection_t *collection,
                               const bson_t **documents,
                               size_t n_documents,
                               const bson_t *opts,
                               bson_t *reply,
                               bson_error_t *error);
extern bool
mongoc_collection_insert_bulk (mongoc_collection_t *collection,
                               mongoc_insert_flags_t flags,
                               const bson_t **documents,
                               uint32_t n_documents,
                               const mongoc_write_concern_t *write_concern,
                               bson_error_t *error)
   ;//xxxxxxxx BSON_GNUC_DEPRECATED;_FOR (mongoc_collection_insert_many);
extern bool
mongoc_collection_update (mongoc_collection_t *collection,
                          mongoc_update_flags_t flags,
                          const bson_t *selector,
                          const bson_t *update,
                          const mongoc_write_concern_t *write_concern,
                          bson_error_t *error);
extern bool
mongoc_collection_update_one (mongoc_collection_t *collection,
                              const bson_t *selector,
                              const bson_t *update,
                              const bson_t *opts,
                              bson_t *reply,
                              bson_error_t *error);
extern bool
mongoc_collection_update_many (mongoc_collection_t *collection,
                               const bson_t *selector,
                               const bson_t *update,
                               const bson_t *opts,
                               bson_t *reply,
                               bson_error_t *error);
extern bool
mongoc_collection_replace_one (mongoc_collection_t *collection,
                               const bson_t *selector,
                               const bson_t *replacement,
                               const bson_t *opts,
                               bson_t *reply,
                               bson_error_t *error);
extern bool
mongoc_collection_delete (mongoc_collection_t *collection,
                          mongoc_delete_flags_t flags,
                          const bson_t *selector,
                          const mongoc_write_concern_t *write_concern,
                          bson_error_t *error)
   ;//xxxxxxxx BSON_GNUC_DEPRECATED;_FOR (mongoc_collection_delete_one or                             mongoc_collection_delete_many);
extern bool
mongoc_collection_save (mongoc_collection_t *collection,
                        const bson_t *document,
                        const mongoc_write_concern_t *write_concern,
                        bson_error_t *error)
   ;//xxxxxxxx BSON_GNUC_DEPRECATED;_FOR (mongoc_collection_insert_one or                             mongoc_collection_replace_one);
extern bool
mongoc_collection_remove (mongoc_collection_t *collection,
                          mongoc_remove_flags_t flags,
                          const bson_t *selector,
                          const mongoc_write_concern_t *write_concern,
                          bson_error_t *error);
extern bool
mongoc_collection_delete_one (mongoc_collection_t *collection,
                              const bson_t *selector,
                              const bson_t *opts,
                              bson_t *reply,
                              bson_error_t *error);
extern bool
mongoc_collection_delete_many (mongoc_collection_t *collection,
                               const bson_t *selector,
                               const bson_t *opts,
                               bson_t *reply,
                               bson_error_t *error);
extern bool
mongoc_collection_rename (mongoc_collection_t *collection,
                          const char *new_db,
                          const char *new_name,
                          bool drop_target_before_rename,
                          bson_error_t *error);
extern bool
mongoc_collection_rename_with_opts (mongoc_collection_t *collection,
                                    const char *new_db,
                                    const char *new_name,
                                    bool drop_target_before_rename,
                                    const bson_t *opts,
                                    bson_error_t *error);
extern bool
mongoc_collection_find_and_modify_with_opts (
   mongoc_collection_t *collection,
   const bson_t *query,
   const mongoc_find_and_modify_opts_t *opts,
   bson_t *reply,
   bson_error_t *error);
extern bool
mongoc_collection_find_and_modify (mongoc_collection_t *collection,
                                   const bson_t *query,
                                   const bson_t *sort,
                                   const bson_t *update,
                                   const bson_t *fields,
                                   bool _remove,
                                   bool upsert,
                                   bool _new,
                                   bson_t *reply,
                                   bson_error_t *error);
extern bool
mongoc_collection_stats (mongoc_collection_t *collection,
                         const bson_t *options,
                         bson_t *reply,
                         bson_error_t *error) ;//xxxxxxxx ;//xxxxxxxx BSON_GNUC_DEPRECATED;;
extern mongoc_bulk_operation_t *
mongoc_collection_create_bulk_operation (
   mongoc_collection_t *collection,
   bool ordered,
   const mongoc_write_concern_t *write_concern) 
   ;//xxxxxxxx BSON_GNUC_DEPRECATED;_FOR (mongoc_collection_create_bulk_operation_with_opts);
extern mongoc_bulk_operation_t *
mongoc_collection_create_bulk_operation_with_opts (
   mongoc_collection_t *collection,
   const bson_t *opts) ;
extern const mongoc_read_prefs_t *
mongoc_collection_get_read_prefs (const mongoc_collection_t *collection);
extern void
mongoc_collection_set_read_prefs (mongoc_collection_t *collection,
                                  const mongoc_read_prefs_t *read_prefs);
extern const mongoc_read_concern_t *
mongoc_collection_get_read_concern (const mongoc_collection_t *collection);
extern void
mongoc_collection_set_read_concern (mongoc_collection_t *collection,
                                    const mongoc_read_concern_t *read_concern);
extern const mongoc_write_concern_t *
mongoc_collection_get_write_concern (const mongoc_collection_t *collection);
extern void
mongoc_collection_set_write_concern (
   mongoc_collection_t *collection,
   const mongoc_write_concern_t *write_concern);
extern const char *
mongoc_collection_get_name (mongoc_collection_t *collection);
extern const bson_t *
mongoc_collection_get_last_error (const mongoc_collection_t *collection)
   ;//xxxxxxxx ;//xxxxxxxx BSON_GNUC_DEPRECATED;;
extern char *
mongoc_collection_keys_to_index_string (const bson_t *keys)
   ;
extern bool
mongoc_collection_validate (mongoc_collection_t *collection,
                            const bson_t *options,
                            bson_t *reply,
                            bson_error_t *error) ;//xxxxxxxx ;//xxxxxxxx BSON_GNUC_DEPRECATED;;
extern mongoc_change_stream_t *
mongoc_collection_watch (const mongoc_collection_t *coll,
                         const bson_t *pipeline,
                         const bson_t *opts) ;
extern int64_t
mongoc_collection_count_documents (mongoc_collection_t *coll,
                                   const bson_t *filter,
                                   const bson_t *opts,
                                   const mongoc_read_prefs_t *read_prefs,
                                   bson_t *reply,
                                   bson_error_t *error);
extern int64_t
mongoc_collection_estimated_document_count (
   mongoc_collection_t *coll,
   const bson_t *opts,
   const mongoc_read_prefs_t *read_prefs,
   bson_t *reply,
   bson_error_t *error);